Another small contrast fix

--- a/style/style.css
+++ b/style/style.css
@@ -123,7 +123,7 @@ main, .container {
 
 .home-page > h2 > span {
     /* color: #f65d38; */
-    color: #fd3300;
+    color: #C70C0C;
 }
 
 /* Main image */
